core/tests/ui/store/back_relate_field_unsupported_nested_wrapper.stderr
error: relation-backed fields support Child / Option<Child> / Vec<Child> / Option<Vec<Child>> shapes whose leaf type implements appdb::Bridge
  --> tests/ui/store/back_relate_field_unsupported_nested_wrapper.rs:15:13
   |
15 |     nested: Vec<Option<RelatedLeaf>>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^
