core/tests/ui/store/back_relate_field_unsupported_nested_wrapper.rs
use appdb::{Id, Store};
use serde::{Deserialize, Serialize};
use surrealdb::types::SurrealValue;

#[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
struct RelatedLeaf {
    id: Id,
    label: String,
}

#[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
struct RelatedRoot {
    id: Id,
    #[back_relate("edge_nested")]
    nested: Vec<Option<RelatedLeaf>>,
}

fn main() {}
